sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:8: error: not found: value int
    j=int(taille/2)
      ^AlgShellSort:11: error: not found: value int
      j=int(j/2)
        ^