sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  val taille=getNombreValeurs()
  var temp=0
  var j=0
  for (i<-1 to taille-1){
    temp=getValeur(i)
    j=int(taille/2)
    while ((j>0)&&(getValeur(j-1)>temp)){
      setValeur(j,getValeur(j-1))
      j=int(j/2)
      }
     	setValeur(j,temp) }
}